syntax = "proto3";

// Package order.v1 содержит описание моделей, которые передаются через kafka при оплате заказа(OrderPaid) и постройке корабля(ShipAssembled)
package events.v1;

option go_package = "github.com/kirillmc/starShipsCompany/shared/pkg/proto/events/v1;events_v1";

// OrderPaid - информация об оплате заказа
message OrderPaid{
  string event_uuid=1;
  string order_uuid=2;
  string user_uuid=3;
  string payment_method=4;
  string transaction_uuid=5;
}

// ShipAssembled - информация о постройке корабля
message ShipAssembled{
  string event_uuid=1;
  string order_uuid=2;
  string user_uuid=3;
  int64 build_time_sec=4;
}
